welcome.lessons.welcome.array.search.IndexOfValue.scala.error
indexOfValue:2: error: '=' expected but ';' found.
  var a=-1;
          ^